# PALS-python

./: LICENSE.txt  NOTICE.txt  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: example.ipynb  examples_fodo.json  examples_fodo.yaml  fodo.py
examples/.ipynb_checkpoints/: example-checkpoint.ipynb  examples_fodo-checkpoint.json  examples_fodo-checkpoint.yaml
src/pals/: __init__.py
src/pals/kinds/: BaseElement.py  BeamLine.py  Bend.py  Drift.py  Kicker.py  Quadrupole.py  Sextupole.py  ThickElement.py  __init__.py
src/pals/parameters/: BendParameters.py  MagneticMultipoleParameters.py  __init__.py
src/pals_schema.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_elements.py  test_serialization.py
